--- a/public/generator.html
+++ b/public/generator.html
@@ -222,30 +222,44 @@
             const code = '<!-- Teachable Streak Widget - Will appear after .DashboardGreeting -->\n' +
                 '<style>\n' +
                 '    #teachable-streak-widget {\n' +
-                '        max-width: 500px;\n' +
-                '        margin: 20px auto;\n' +
+                '        max-width: 100%;\n' +
+                '        margin: 20px 0;\n' +
                 '        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;\n' +
                 '    }\n' +
                 '    .streak-widget-card {\n' +
                 '        background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);\n' +
-                '        border-radius: 16px;\n' +
-                '        padding: 32px;\n' +
+                '        border-radius: 12px;\n' +
+                '        padding: 20px 32px;\n' +
                 '        color: white;\n' +
-                '        box-shadow: 0 10px 40px rgba(0, 0, 0, 0.15);\n' +
-                '        text-align: center;\n' +
+                '        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);\n' +
+                '        display: flex;\n' +
+                '        align-items: center;\n' +
+                '        justify-content: space-between;\n' +
+                '        gap: 24px;\n' +
                 '    }\n' +
-                '    .streak-fire { font-size: 48px; margin-bottom: 12px; animation: flicker 2s infinite; }\n' +
+                '    .streak-main {\n' +
+                '        display: flex;\n' +
+                '        align-items: center;\n' +
+                '        gap: 20px;\n' +
+                '    }\n' +
+                '    .streak-fire { font-size: 48px; animation: flicker 2s infinite; margin: 0; }\n' +
                 '    @keyframes flicker { 0%, 100% { transform: scale(1); } 50% { transform: scale(1.1); } }\n' +
-                '    .streak-number { font-size: 64px; font-weight: 800; margin-bottom: 8px; }\n' +
-                '    .streak-label { font-size: 18px; opacity: 0.9; margin-bottom: 16px; }\n' +
-                '    .streak-message { background: rgba(255,255,255,0.2); padding: 12px; border-radius: 8px; margin-top: 16px; }\n' +
-                '    .streak-stats { display: grid; grid-template-columns: 1fr 1fr; gap: 12px; margin-top: 16px; }\n' +
-                '    .stat-item { background: rgba(255,255,255,0.15); padding: 12px; border-radius: 8px; }\n' +
-                '    .stat-value { font-size: 24px; font-weight: 700; }\n' +
-                '    .stat-label { font-size: 12px; opacity: 0.8; }\n' +
-                '    .streak-calendar { display: grid; grid-template-columns: repeat(7, 1fr); gap: 6px; margin-top: 16px; }\n' +
-                '    .calendar-day { aspect-ratio: 1; background: rgba(255,255,255,0.2); border-radius: 6px; display: flex; align-items: center; justify-content: center; font-size: 11px; font-weight: 600; }\n' +
+                '    .streak-info { display: flex; align-items: center; gap: 16px; }\n' +
+                '    .streak-number { font-size: 48px; font-weight: 800; line-height: 1; }\n' +
+                '    .streak-label { font-size: 14px; opacity: 0.9; }\n' +
+                '    .streak-message { background: rgba(255,255,255,0.2); padding: 12px 16px; border-radius: 8px; font-size: 14px; white-space: nowrap; }\n' +
+                '    .streak-stats { display: flex; gap: 16px; }\n' +
+                '    .stat-item { background: rgba(255,255,255,0.15); padding: 12px 20px; border-radius: 8px; text-align: center; min-width: 80px; }\n' +
+                '    .stat-value { font-size: 24px; font-weight: 700; line-height: 1; }\n' +
+                '    .stat-label { font-size: 11px; opacity: 0.8; margin-top: 4px; }\n' +
+                '    .streak-calendar { display: flex; gap: 6px; }\n' +
+                '    .calendar-day { width: 36px; height: 36px; background: rgba(255,255,255,0.2); border-radius: 6px; display: flex; align-items: center; justify-content: center; font-size: 12px; font-weight: 600; }\n' +
                 '    .calendar-day.active { background: rgba(255,215,0,0.9); }\n' +
+                '    @media (max-width: 768px) {\n' +
+                '        .streak-widget-card { flex-direction: column; text-align: center; }\n' +
+                '        .streak-main { flex-direction: column; }\n' +
+                '        .streak-message { white-space: normal; }\n' +
+                '    }\n' +
                 '</style>\n\n' +
                 '<script>\n' +
                 '(function() {\n' +
@@ -264,7 +278,12 @@
                 '            if (greeting) {\n' +
                 '                container = document.createElement("div");\n' +
                 '                container.id = "teachable-streak-widget";\n' +
-                '                greeting.parentNode.insertBefore(container, greeting.nextSibling);\n' +
+                '                // Insert AFTER the greeting (nextSibling inserts after)\n' +
+                '                if (greeting.nextSibling) {\n' +
+                '                    greeting.parentNode.insertBefore(container, greeting.nextSibling);\n' +
+                '                } else {\n' +
+                '                    greeting.parentNode.appendChild(container);\n' +
+                '                }\n' +
                 '            } else {\n' +
                 '                return; // Exit if no greeting element found\n' +
                 '            }\n' +
@@ -294,10 +313,14 @@
                 '        const message = data.isNewUser ? "Welcome! Your journey begins! 🎉" : (messages[data.currentStreak] || data.currentStreak + " days! On fire! 🔥");\n\n' +
                 '        const calendar = renderCalendar(data.visitDates || []);\n\n' +
                 '        const html = \'<div class="streak-widget-card">\' +\n' +
-                '            \'<div class="streak-fire">🔥</div>\' +\n' +
-                '            \'<div class="streak-number">\' + data.currentStreak + \'</div>\' +\n' +
-                '            \'<div class="streak-label">\' + (data.currentStreak === 1 ? "day" : "days") + \' in a row</div>\' +\n' +
-                '            \'<div class="streak-calendar">\' + calendar + \'</div>\' +\n' +
+                '            \'<div class="streak-main">\' +\n' +
+                '                \'<div class="streak-fire">🔥</div>\' +\n' +
+                '                \'<div class="streak-info">\' +\n' +
+                '                    \'<div class="streak-number">\' + data.currentStreak + \'</div>\' +\n' +
+                '                    \'<div class="streak-label">\' + (data.currentStreak === 1 ? "day" : "days") + \' in a row</div>\' +\n' +
+                '                \'</div>\' +\n' +
+                '                \'<div class="streak-calendar">\' + calendar + \'</div>\' +\n' +
+                '            \'</div>\' +\n' +
                 '            \'<div class="streak-message">\' + message + \'</div>\' +\n' +
                 '            \'<div class="streak-stats">\' +\n' +
                 '                \'<div class="stat-item"><div class="stat-value">\' + data.longestStreak + \'</div><div class="stat-label">Longest</div></div>\' +\n' +
