--- a/public/generator.html
+++ b/public/generator.html
@@ -244,21 +244,18 @@
                 '    }\n' +
                 '    .streak-fire { font-size: 48px; animation: flicker 2s infinite; margin: 0; }\n' +
                 '    @keyframes flicker { 0%, 100% { transform: scale(1); } 50% { transform: scale(1.1); } }\n' +
-                '    .streak-info { display: flex; align-items: center; gap: 16px; }\n' +
-                '    .streak-number { font-size: 48px; font-weight: 800; line-height: 1; }\n' +
-                '    .streak-label { font-size: 14px; opacity: 0.9; }\n' +
-                '    .streak-message { background: rgba(255,255,255,0.2); padding: 12px 16px; border-radius: 8px; font-size: 14px; white-space: nowrap; }\n' +
-                '    .streak-stats { display: flex; gap: 16px; }\n' +
-                '    .stat-item { background: rgba(255,255,255,0.15); padding: 12px 20px; border-radius: 8px; text-align: center; min-width: 80px; }\n' +
-                '    .stat-value { font-size: 24px; font-weight: 700; line-height: 1; }\n' +
-                '    .stat-label { font-size: 11px; opacity: 0.8; margin-top: 4px; }\n' +
-                '    .streak-calendar { display: flex; gap: 6px; }\n' +
-                '    .calendar-day { width: 36px; height: 36px; background: rgba(255,255,255,0.2); border-radius: 6px; display: flex; align-items: center; justify-content: center; font-size: 12px; font-weight: 600; }\n' +
-                '    .calendar-day.active { background: rgba(255,215,0,0.9); }\n' +
+                '    .streak-info { display: flex; align-items: center; gap: 12px; }\n' +
+                '    .streak-number { font-size: 56px; font-weight: 800; line-height: 1; }\n' +
+                '    .streak-label { font-size: 16px; opacity: 0.95; font-weight: 600; }\n' +
+                '    .streak-message { flex: 1; background: rgba(255,255,255,0.2); padding: 14px 20px; border-radius: 8px; font-size: 16px; font-weight: 600; }\n' +
+                '    .streak-stats { display: flex; gap: 12px; }\n' +
+                '    .stat-item { background: rgba(255,255,255,0.15); padding: 10px 16px; border-radius: 8px; text-align: center; }\n' +
+                '    .stat-value { font-size: 28px; font-weight: 800; line-height: 1; }\n' +
+                '    .stat-label { font-size: 11px; opacity: 0.85; margin-top: 4px; text-transform: uppercase; letter-spacing: 0.5px; }\n' +
                 '    @media (max-width: 768px) {\n' +
-                '        .streak-widget-card { flex-direction: column; text-align: center; }\n' +
+                '        .streak-widget-card { flex-direction: column; gap: 16px; }\n' +
                 '        .streak-main { flex-direction: column; }\n' +
-                '        .streak-message { white-space: normal; }\n' +
+                '        .streak-number { font-size: 48px; }\n' +
                 '    }\n' +
                 '</style>\n\n' +
                 '<script>\n' +
@@ -306,12 +303,15 @@
                 '    function renderWidget(data) {\n' +
                 '        const messages = {\n' +
                 '            1: "You\'re back! Let\'s build a streak! 💪",\n' +
-                '            3: "3 days! Building a habit! 🔥",\n' +
-                '            7: "One week! Unstoppable! 🚀",\n' +
-                '            30: "30 days! Legend! 👑"\n' +
+                '            2: "Two days in a row! Keep it going! 🌟",\n' +
+                '            3: "3 days strong! You\'re building a habit! 🔥",\n' +
+                '            7: "One week streak! You\'re unstoppable! 🚀",\n' +
+                '            14: "Two weeks! Your dedication is inspiring! ⭐",\n' +
+                '            30: "30 days! You\'re a learning legend! 👑",\n' +
+                '            60: "60 days! Incredible commitment! 🏆",\n' +
+                '            100: "100 DAYS! You\'re absolutely amazing! 🎊"\n' +
                 '        };\n' +
-                '        const message = data.isNewUser ? "Welcome! Your journey begins! 🎉" : (messages[data.currentStreak] || data.currentStreak + " days! On fire! 🔥");\n\n' +
-                '        const calendar = renderCalendar(data.visitDates || []);\n\n' +
+                '        const message = data.isNewUser ? "Welcome! Your learning journey begins today! 🎉" : (messages[data.currentStreak] || data.currentStreak + " days! You\'re on fire! 🔥");\n\n' +
                 '        const html = \'<div class="streak-widget-card">\' +\n' +
                 '            \'<div class="streak-main">\' +\n' +
                 '                \'<div class="streak-fire">🔥</div>\' +\n' +
@@ -319,30 +319,14 @@
                 '                    \'<div class="streak-number">\' + data.currentStreak + \'</div>\' +\n' +
                 '                    \'<div class="streak-label">\' + (data.currentStreak === 1 ? "day" : "days") + \' in a row</div>\' +\n' +
                 '                \'</div>\' +\n' +
-                '                \'<div class="streak-calendar">\' + calendar + \'</div>\' +\n' +
                 '            \'</div>\' +\n' +
                 '            \'<div class="streak-message">\' + message + \'</div>\' +\n' +
                 '            \'<div class="streak-stats">\' +\n' +
-                '                \'<div class="stat-item"><div class="stat-value">\' + data.longestStreak + \'</div><div class="stat-label">Longest</div></div>\' +\n' +
+                '                \'<div class="stat-item"><div class="stat-value">\' + data.longestStreak + \'</div><div class="stat-label">Record</div></div>\' +\n' +
                 '                \'<div class="stat-item"><div class="stat-value">\' + data.totalVisits + \'</div><div class="stat-label">Total</div></div>\' +\n' +
                 '            \'</div>\' +\n' +
                 '        \'</div>\';\n\n' +
                 '        document.getElementById("teachable-streak-widget").innerHTML = html;\n' +
-                '    }\n\n' +
-                '    function renderCalendar(visitDates) {\n' +
-                '        let html = "";\n' +
-                '        const today = new Date();\n' +
-                '        today.setHours(0, 0, 0, 0);\n' +
-                '        const days = ["S", "M", "T", "W", "T", "F", "S"];\n\n' +
-                '        for (let i = 6; i >= 0; i--) {\n' +
-                '            const date = new Date(today);\n' +
-                '            date.setDate(date.getDate() - i);\n' +
-                '            const dateStr = date.toISOString().split("T")[0];\n' +
-                '            const isActive = visitDates.includes(dateStr);\n' +
-                '            const dayLabel = days[date.getDay()];\n' +
-                '            html += \'<div class="calendar-day \' + (isActive ? "active" : "") + \'">\' + dayLabel + \'</div>\';\n' +
-                '        }\n' +
-                '        return html;\n' +
                 '    }\n\n' +
                 '    if (document.readyState === "loading") {\n' +
                 '        document.addEventListener("DOMContentLoaded", loadStreak);\n' +
